# dataprep

./: .gitignore  CMakeLists.txt  README.md  c2.bvh  d2.dae
matlab/: data  draw_skel.m  main.m  plotRootTraj.m
src/: utils.hpp  v1.cpp  v2.cpp
